# hackthon

./: .env.example  .gitignore  PRODUCT_BRIEF.md  README.md  app.py  cognee_memory_governance_summary.md  data_rescue_use_case_1.md  design.html  guidance_steps.md  product_requirements_and_gpt_prompt.md  pyproject.toml
.claude/: launch.json
data/: hackathon_requirements.md  hackathon_slides_ocr.md  vibe_forward_competition_info.md
data/kaggle/: README_track01.md
src/: __init__.py  cognee_memory.py
src/audit_passport/: __init__.py  agents.py  data_loader.py  export_web_data.py  geodo.py  gpt_agents.py  lint.py  memory.py  models.py  probabilistic.py  report.py  report_charts.py  ripple.py  web_server.py
tests/: test_gpt_multi_agent.py
web/: app.js  index.html  styles.css
web/data/: audit_ripple.json  audit_run.json
